# u-boot-marvell

./: .checkpatch.conf  .gitignore  Kconfig  MAINTAINERS  Makefile  README  README.MARVELL  UbootReadme.txt  UbootReleaseNote.txt  armada_xp_a0_DDR3.cmm  boards.cfg  build.pl  build_a370_db.pl  build_xp_amc.pl  build_xp_db-nand.pl  build_xp_db.pl  build_xp_gp.pl  build_xp_rdcustomer.pl  build_xp_rdserver.pl  buildall.pl  download-serial.sh  localversion  mkconfig  myclean.pl  snapshot.commit  version.txt
api/: api.c
bin_hdr_armada_a370/: bin_hdr.elf
bin_hdr_armada_axp/: bin_hdr_ddr.srec  bin_hdr_phy.srec
cmd/: Kconfig  Makefile  bootefi.c  bootimgup.c  efidebug.c  fdt.c  mem.c  (+7 more)
tools/marvell/bin_hdr/src_phy/msys/avago/aapl/: Makefile.am  Makefile.example  Makefile.in  aacs.c  aacs_server.c  aapl_core.c  avago.mk  gpio_mdio.c  gtBuild  i2c.c  library.c  logging.c  mdio.c  pmd.c  sbus.c  sbus_access.c  serdes_core.c  spico.c  user_code.c
tools/marvell/bin_hdr/src_phy/msys/avago/aapl/include/: aacs_server.h  aapl.h  aapl_core.h  aapl_library.h  asic_info.h  gpio_mdio.h  i2c.h  logging.h  mdio.h  pmd.h  sbus.h  serdes_core.h  spico.h  system_includes.h
tools/marvell/bin_hdr/src_phy/msys/avago/aapl/marvell/: marvell_API_mapping.h  mv_hws_avago_if.h  mv_hws_avago_serdes_if.c  mv_hws_strtol.c
tools/marvell/bin_hdr/src_phy/msys/avago/aapl/marvell/sd28firmware/: avago_fw_load.h  sbus_master.0x100F_8001.h  sbus_master.0x1015_0001.h  serdes.0x104A_0041.h  serdes.0x104A_0045.h  serdes.0x104A_0045swap.h  serdes.0x1055_0041.h  serdes.0x1055_0045.h  serdes.0x1055_0045swap.h
(+2879 files in other folders)
